--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -358,11 +358,11 @@ Hero
   }
 
   .hero-content h3 {
-    color: #fff
+    color: rgb(15, 15, 15)
   }
 
   .hero-content p {
-    color: #fff
+    color: rgb(12, 12, 12)
   }
 }
 
