--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -358,11 +358,13 @@ Hero
   }
 
   .hero-content h3 {
-    color: rgb(15, 15, 15)
+    color: rgb(201, 205, 218);
+    text-shadow: 0 0 4px rgb(14, 15, 20);
   }
 
   .hero-content p {
-    color: rgb(12, 12, 12)
+    color: rgb(201, 205, 218);
+    text-shadow: 0 0 4px rgb(14, 15, 20);
   }
 }
 
