--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -358,13 +358,11 @@ Hero
   }
 
   .hero-content h3 {
-    color: #b11875;
-    text-shadow: 0 0 4px rgb(14, 15, 20);
+    color: #bd147d;
   }
 
   .hero-content p {
-    color: rgb(201, 205, 218);
-    text-shadow: 0 0 4px rgb(14, 15, 20);
+    color: #000;
   }
 }
 
