--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -42,7 +42,7 @@ p {
   font-size: $font-size-p;
   line-height: $base-line-height;
   color: $txt-primary;
-  padding-bottom: 20px;
+  //padding-bottom: 20px;
 }
 
 h1 {
